tests/error/too_many_inputs.ca

def f(int a, int b)
    print('a = ' a)
    print('b = ' b)

f(1, 2)
f(1, 2, 3)
